fix: env and test

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "511",
   "license": "ISC",
   "scripts": {
-    "test": "ts-node ./test.ts",
     "serve": "ts-node ./index.ts",
     "log": "ts-node ./log.ts",
+    "test": "npm run serve && npm run log",
     "lint": "prettier --write '**/*.{ts,js}'"
   },
   "keywords": [
