--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -3,7 +3,7 @@ name: "Scheduler Jobs Bot"
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 1 11 * *"
+    - cron: "12 1 * * *"
 env:
   NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
   DATABASE_ID: ${{ secrets.DATABASE_ID }}
