--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -17,12 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Checkout codes"
-        uses: actions/checkout@v3
+      - name: "Checkout code"
+        uses: actions/checkout@v4.1.7 
       - name: "Setup Node.js environment"
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4.0.2
         with:
-          node-version: 18
+          node-version: 20
       - name: "install dependencies"
         run: npm i
       - name: "executing jobs"
