--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@notionhq/client": "^2.0.0",
     "dotenv": "^16.0.2",
-    "playwright": "^1.23.0",
+    "playwright": "1.44.1",
     "ts-node": "^10.9.1"
   }
 }
