--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -19,15 +19,38 @@ jobs:
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4.1.7 
+
       - name: "Setup Node.js environment"
         uses: actions/setup-node@v4.0.2
         with:
           node-version: 20
-      - name: "install dependencies"
-        run: npm i
-      - name: Install Playwright browsers
+
+      - name: "Cache Node.js modules"
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: "Cache Playwright browsers"
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-playwright-
+
+      - name: "Install dependencies"
+        run: npm ci
+
+      - name: "Install Playwright browsers"
         run: npx playwright install --with-deps
-      - name: "executing jobs"
+
+      - name: "Executing jobs"
         run: npm run serve
-      - name: "update log and commit"
+
+      - name: "Update log and commit"
         run: npm run update
