--- a/.github/workflows/scheduler.yaml
+++ b/.github/workflows/scheduler.yaml
@@ -9,8 +9,10 @@ env:
   DATABASE_ID: ${{ secrets.DATABASE_ID }}
   GFW_USERNAME: ${{ secrets.GFW_USERNAME }}
   GFW_USERNAME_2: ${{ secrets.GFW_USERNAME_2 }}
+  GFW_USERNAME_3: ${{ secrets.GFW_USERNAME_3 }}
   GFW_PWD: ${{ secrets.GFW_PWD }}
   GFW_PWD_2: ${{ secrets.GFW_PWD_2 }}
+  GFW_PWD_3: ${{ secrets.GFW_PWD_3 }}
   GFW_URL: ${{ secrets.GFW_URL }}
   BARK_KEY: ${{ secrets.BARK_KEY }}
 
